syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.electronicsspringbootclientservice";

service PingService {
  rpc Ping(PingRequest) returns (PingResponse){};
  rpc getProductById(GetProductByIdRequest) returns (GetProductByIdResponse){};
}

message PingRequest {
  string request = 1;
}

message PingResponse {
  string message = 1;
  string time = 2;
}

message GetProductByIdRequest{
  int32 productId = 1;
}
message GetProductByIdResponse{
  int32 productId = 1;
  string productName = 2;
  int64 productPrice = 3;
  string productCategoryName = 4;
}